Add calendar heatmap

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
-        "calendar-heatmap-graph": "0.0.14"
+        "vue-calendar-heatmap": "^0.8.4"
     }
 }
