--- a/package.json
+++ b/package.json
@@ -23,7 +23,5 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.5.21"
     },
-    "dependencies": {
-        "vue-calendar-heatmap": "^0.8.4"
-    }
+    "dependencies": {}
 }
