--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
+        "ionicons": "^4.5.5",
         "moment": "^2.24.0"
     }
 }
